# C-Advanced

./: .gitignore  .lldbinit  Dockerfile  Makefile  README.md  debug.sh  dict_test.c  example1-3  example1-3.c  gcov.sh  gdbinit.sh  glist  glist_lldb  keyval.h  lldb_showlist  lldbinit.sh  stddev_bugged  stddev_bugged_docker  test  test.c  test2.c  test2.sh  test3  test3.c
src/allheads/: allheads.h  allheads.sh
src/cooperation/: dynamic  dynamic.c  dynamic.sh  fn.c
src/dict/: dict.c  dict.h  dict_test  dict_test.sh  keyval.c
src/example1_3/: CMakeLists.txt  Makefile  example1-3.sh
src/git/: diff.sh  f1  f2  f2.c  git.sh
src/here/: here1.sh  here2.sh
src/init/: .gdbinit  .lldbinit  gdbinit.sh  lldbinit.sh
src/list/: gdb_showlist  glist  glist.c  glist.sh  lldb_glist.sh
src/shell/: Makefile.am  another.sh  auto.conf  auto.sh  automake.sh  backup.sh  benford.sh  dict.automake  dict_use  dict_use.c  example  example.c  iftest.sh  linecount  linecount.c  linecount.sh  lines_with_0  lines_with_1  lines_with_2  lines_with_3  lines_with_4  lines_with_5  lines_with_6  lines_with_7  lines_with_8  lines_with_9  make_bit  make_bit.sh
src/shell/autodemo/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure.scan  hello.c
src/shell/autodemo/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
src/stddev_bugged/: debug.sh  stddev_bugged  stddev_bugged.c  stddev_bugged_docker
src/test/: test  test.sh
src/test2/: test2  test2.sh
src/test3/: test3
src/valgrind/: valgrind.sh
